test/tests/compiler/18_structures/invalid_types/extra_credit/incompatible_union_types/union_pointer_branch_mismatch.plx
pub fn main(none) i32 {
    type union u1;
    
    type union u2;
    

    ptr1: *union u1 = 0
    ptr2: *union u2 = 0
    ? 
    true then ptr1 else ptr2 #  INVALID: different pointer types
    return false
}
